--- a/_posts/2019-12-26-the-us-narrative-today.html
+++ b/_posts/2019-12-26-the-us-narrative-today.html
@@ -1738,107 +1738,107 @@ stories:
   domain: http://www.vnews.com/
   link: https://www.galvnews.com/news_ap/international/image_f99c8590-f441-59ec-9276-9cf56e7fd049.html
 images:
-- name: razorwire-DSC-0080-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-graham-sutherland.jpg
-- name: server-cloud-server-racks-clouds-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dry-skin.jpg
-- name: stalin-time-cross-against-trees.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-cross-against-trees.jpg
-- name: windowmountain-window-mountain-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-smoking-cigarette.jpg
-- name: walled-garden-walled-garden-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-umberto-bocc.jpg
-- name: window-window-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-purple-storm.jpg
-- name: hollywood-building-hollywood-building-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-hot-spicy.jpg
-- name: nazi-invasion-freeway-carss-overpass.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-freeway-carss-overpass.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-aqua.jpg
-- name: stalin-time-crypto-wheels-old-compute-bletchley.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-crypto-wheels-old-compute-bletchley.jpg
-- name: copper-circuit-statue-of-liberty_35910144944_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-of-liberty_35910144944_o.jpg
-- name: server-cloud-server-racks-clouds-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-clean-view.jpg
-- name: rockingchair-rockingchair-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-ww2-color.jpg
-- name: old-door-lock-old-door-lock-2-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-spagetti-accident.jpg
-- name: old-door-lock-old-door-lock-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-kand-two.jpg
-- name: aws-s3-stories-capitolbattle-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-capitolbattle-blue-circuit.jpg
-- name: dragon-desert-desert-dragon-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-dali.jpg
-- name: oldhouse-oldhouse-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-diego-rivera1.jpg
-- name: ellis-island-ellisisland-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-pablo-blue.jpg
-- name: blossombar-purp-paper-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purp-paper-file-00-00-24-99.jpg
-- name: ellis-island-ellis-island-room-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-diego-rivera1.jpg
-- name: oldroad-old-road-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-monet-one.jpg
-- name: hollywood-building-hollywood-building-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-atari-asteroids.jpg
-- name: bluelake-dry-skin-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dry-skin-file-00-00-38-67.jpg
-- name: nyc-flag-nycflag-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-kandinsky-bv.jpg
-- name: flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
-- name: nyc-flag-nycflag-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colorful-dream.jpg
-- name: nazi-invasion-old-gas-station_36588462091_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-gas-station_36588462091_o.jpg
-- name: white-house-lawn-white-house-lawn-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-yellow-collage.jpg
-- name: copper-circuit-rocking-chair-on-porch_36332220150_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-rocking-chair-on-porch_36332220150_o.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-neo-instinct.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-neo-instinct.JPG
-- name: art-museum-art-museum-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-feed-people.jpg
-- name: copper-circuit-dandelions-in-rocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dandelions-in-rocks.jpg
-- name: aws-s3-smithriver-smithriver-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-smithriver-smithriver-still.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-atari-asteroids.jpg
-- name: old-door-lock-old-door-lock-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-copper-circuit-2.jpg
-- name: ellis-island-ellisisland-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colorful-blocks.jpg
-- name: cyber-api-description-wars-img-3820-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-img-3820-dark-dali.jpg
-- name: bluelake-blue-granite-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-granite-file-00-00-00-00.jpg
-- name: windowmountain-window-mountain-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-emily-carr.jpg
-- name: beach-rocks-beach-rocks-currents-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-rainbow-festival.jpg
-- name: beach-clouds-lifeguard-beachclouds-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-atari-missle.jpg
-- name: braceros-domingo-ulloa-hotel-down-sidewalk.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-hotel-down-sidewalk.jpg
-- name: copper-circuit-statue-staring-down-to-right.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-staring-down-to-right.jpg
-- name: aws-s3-stories-christianity-under-construction-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-christianity-under-construction-atari-asteroids.jpg
-- name: crow-crow-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-diego-rivera1.jpg
-- name: christianity-christianity-under-construction-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-attack-planes.jpg
-- name: amusement-park-amusement-park-2-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-dark-dali.jpg
-- name: eduardo-eduardo-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-green-zuma.jpg
-- name: mosaic-face-mosaic-face-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dali-two.jpg
-- name: old-door-lock-old-door-lock-2-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-propaganda-leaflets.jpg
+- name: birdhouse-birdhouse-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-ww2-dresden.jpg
+- name: dc-statue-dcstatue-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-marcel-duchamp.jpg
+- name: windowmountain-window-mountain-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-alien-goggles.jpg
+- name: aws-s3-square-C2zqzsfVIAA2hcM-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2zqzsfVIAA2hcM-square.jpg
+- name: hollywood-building-hollywood-building-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-crafty-painting.jpg
+- name: gears-4882162452-fa3126b38d-b-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-colored-circuits.jpg
+- name: bordercrossing-bordercrossing-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-cinnamon-rolls.jpg
+- name: meadowbutterfly-meadow-butterfly-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dark-soul.jpg
+- name: aws-s3-columbiagorge-columbiagorge-transformed-still-1200.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-columbiagorge-columbiagorge-transformed-still-1200.png
+- name: adam-smith-adam-smith-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-neo-instinct.jpg
+- name: death-valley-death-valley-national-park-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-hot-spicy.jpg
+- name: docks-docks-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-colored-circuits.jpg
+- name: old-door-lock-old-door-lock-2-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dali-three.jpg
+- name: braceros-domingo-ulloa-train-station-cloud.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-train-station-cloud.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-hot-spicy.jpg
+- name: copper-circuit-washington-monument-afar.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-washington-monument-afar.jpg
+- name: aws-s3-stories-new-68-76-800-500-0-max-0-1--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-68-76-800-500-0-max-0-1--5.jpg
+- name: copper-circuit-statue-playing-instrument.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-playing-instrument.jpg
+- name: birdhouse-birdhouse-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-matrix.jpg
+- name: aws-s3-stories-redes-fast-flux-623x425-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-redes-fast-flux-623x425-blue-electricity.jpg
+- name: downtown-trucksilo-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-gan-vogh.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-free-woman.jpg
+- name: trucksilo-trucksilo-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-plentiful.jpg
+- name: windowmountain-window-mountain-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-diego-rivera1.jpg
+- name: aws-s3-square-beach-rocks-currents-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-beach-rocks-currents-blue-circuit-5.jpg
+- name: dc-statue-dcstatue-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-nazi-poster.jpg
+- name: art-museum-art-museum-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-electricity.jpg
+- name: stalin-time-creepy-doll-looking-down.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-creepy-doll-looking-down.jpg
+- name: hollywood-building-hollywood-building-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-purple-storm.jpg
+- name: nyc-flag-nycflag-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-really-hot.jpg
+- name: nazi-invasion-stainless-tree-sun-ray.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-stainless-tree-sun-ray.jpg
+- name: white-house-lawn-white-house-window-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-green-zuma.jpg
+- name: white-house-lawn-white-house-lawn-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-blue-brush.jpg
+- name: christianity-christianity-under-construction-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-atari-missle.jpg
+- name: downtown-los-angeles-downtown-la-space-pizza.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-space-pizza.JPG
+- name: carry-load-carryload-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-marcel-duchamp.jpg
+- name: oldsmallboat-oldsmallboat-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-cinnamon-rolls.jpg
+- name: copper-circuit-city-building-trees-sky.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-city-building-trees-sky.jpg
+- name: copper-circuit-going-to-dowtown-los-angeles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-going-to-dowtown-los-angeles.jpg
+- name: oldbarn-oldbarn-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-smoking-cigarette.jpg
+- name: rockingchair-face-2-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-constitution.jpg
+- name: legal-statue-legalstatue-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-sand-paper.jpg
+- name: docks-docks-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-really-hot.jpg
+- name: old-barn-old-barn-1500-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-pablo-blue.jpg
+- name: birdhouse-birdhouse-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-gred-mash.jpg
+- name: abandonedbuildings_smoking_cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_smoking_cigarette.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-cinnamon-rolls.jpg
+- name: old-door-lock-old-door-lock-2-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-colorful-dream.jpg
+- name: old-gas-pumps-oldgaspumps-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-wols.jpg
+- name: aws-s3-stories-new-beach-rocks-currents-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-beach-rocks-currents-kand-two.jpg
+- name: lincoln-memorial-lincolnmemorial-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-kandinsky-bv.jpg
 ---
 Thousands In Indonesia Pray On 15th Anniversary Of Tsunami.&nbsp;Gilmer Man Charged With Trying To Meet Teen For Sex.&nbsp;Geometry Global And MediaINFO Digital Library.&nbsp;Hospice Of Gladwin Area Welcomes New Board Member.&nbsp;Gifts From The Heart.&nbsp;Great American Cleanup Set.&nbsp;Storm Topples Wall, Graves In Old Jewish Cemetery In Beirut.&nbsp;Not Just Santa Anymore.&nbsp;
